samples/_failures_safe/1761722860_28cb2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f77cb02b.c: In function ‘main’:
./samples/SAFE/__tmp_f77cb02b.c:172:9: error: expected ‘;’ at end of input
  172 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_f77cb02b.c:172:5: error: expected declaration or statement at end of input
  172 |     free
      |     ^~~~
